# pydfuutil

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  BACKLOG.md  CHANGELOG.md  MANIFEST.in  README.md  core.py  int1  int2  main.py  probeConfig.py  progress.py  py.typed  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  usbpath.powershell
.github/: dependabot.yml
.github/workflows/: pylint.yml  pytest.yml  python-package.yml  python-publish-test.yml  python-publish.yml  ruff.yml  ty.yml
_old/: __main__.py
docs/: SYNC_WITH_C_UPSTREAM_BACKLOG.md
native/: README.md  pyproject.toml
pydfuutil/: __init__.py  __main__.py  _dfu_util.py  _lsusb.py  _main.py  _usb_util.py  dfu.py  dfu_file.py  dfu_load.py  dfu_util.py  dfuse.py  dfuse.py.bak  dfuse1.py  dfuse_mem.py  exceptions.py  lmdfu.py  lmdfu.py.bak  logger.py  lsusb.py  main.py  portable.py  prefix.py  progress.py  quirks.py  suffix.py  usb_dfu.py
tests/: check_exceptions.py  test_dfu.py  test_dfu_file.py  test_dfu_file_crc_perf.py  test_dfu_load.py  test_dfuse.py  test_dfuse.py.bak  test_dfuse1.py  test_dfuse_mem.py  test_init_optional_libusb_package.py  test_lmdfu.py  test_main.py  test_progress.py  test_quirks.py
usb-stubs/: __init__.pyi  _debug.pyi  _interop.pyi  _lookup.pyi  _objfinalizer.pyi  _version.pyi  control.pyi  core.pyi  legacy.pyi  util.pyi
usb-stubs/backend/: __init__.pyi  libusb1.pyi
