# Copyright 2023 Yaroshenko Dmytro (https://github.com/o-murphy)

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "pydfuutil"
authors = [{ name = "o-murphy", email = "thehelixpg@gmail.com" }]
description = "PyDfuUtil - Pure python fork of dfu-util wrappers to libusb"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["dfu_util", "dfu-util", "pydfu", "libusb", "python", "python3"]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["libusb-package>=1.0.30.0", "pyusb>=1.3.1"]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/o-murphy/pydfuutil"
"Bug Reports" = "https://github.com/o-murphy/pydfuutil/issues"
"Source" = "https://github.com/o-murphy/pydfuutil"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "ty>=0.0.59",
    "rich",
    "tqdm",
    "pre-commit>=4.6.0",
]

[project.optional-dependencies]
rich = ["rich"]

[tool.setuptools]
py-modules = ["pydfuutil"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pydfuutil*"]

[tool.setuptools_scm]
fallback_version = "0.0.0.dev0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ty.src]
exclude = ["setup.py"]

# uncomment to configure ruff linter/formatter
[tool.ruff]
include = [
    "pyproject.toml",
    "src/**/*.py",
    "tests/**/*.py",
    "src/**/*.pyi",
    "tests/**/*.pyi",
    "usb-stubs/**/*.pyi",
]
exclude = [
    ".git",
    "__pypackages__",
    "*.egg-info",
    ".ruff_cache",
    "venv",
    ".venv",
    "__init__.py",
]

[project.scripts]
pydfuutil = "pydfuutil.__main__:main"
pydfuutil-suffix = "pydfuutil.suffix:main"
pydfuutil-prefix = "pydfuutil.prefix:main"
pydfuutil-lsusb = "pydfuutil.lsusb:main"
