# Copyright 2023 Yaroshenko Dmytro (https://github.com/o-murphy)

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pydfuutil-native"
description = "Native backend for PyDfuUtil"
readme = "README.md"
keywords = ["dfu_util", "dfu-util", "pydfu", "libusb", "python", "python3"]
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []
dynamic = ["version"]

[dependency-groups]
dev = []

[tool.setuptools]
py-modules = ["pydfuutil"]

[tool.setuptools.packages.find]
where = [".."]
include = ["pydfuutil_native*"]

[tool.setuptools_scm]
fallback_version = "0.0.0.dev0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ty.src]
exclude = ["**/setup.py", "**/dfu-util/*.py"]

[tool.ruff]
include = [
    "pyproject.toml",
    "src/**/*.py",
    "tests/**/*.py",
    "src/**/*.pyi",
    "tests/**/*.pyi",
]

[tool.cibuildwheel]
# The wheel is tagged py3-none-<plat> by libusb_bdist_wheel.get_tag() in setup.py (the extension
# doesn't touch the CPython C API), so it's compatible with any CPython 3.9+ build, including
# free-threaded. One interpreter per platform/arch is enough; python_requires = >=3.9 in setup.cfg.
build = "cp39-*"
build-verbosity = 1

[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-build = "brew install autoconf automake libtool m4"

[tool.cibuildwheel.windows]
archs = ["auto"]
